# BlockEngine

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  collision.cpp  collision.hpp  config.hpp  cubeVertices.hpp  main.cpp  map.cpp  map.hpp  shader.cpp  stb_image.cpp  texture.cpp  texture.hpp
shaders/cube/: frag.glsl  vert.glsl
